admission/ValidatingAdmissionPolicy/policies/readinessprobe-tcpsocket-host/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readinessprobe-tcpsocket-host-containers
  annotations:
    kubeapt.io/uuid: "15864541-e1ff-4369-b8c5-785ced7de8ce"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    readinessProbe:
      tcpSocket:
        port: 80
        host: 127.0.0.1
